exercises/ex4-ingress-Gateway/1-ingress-dashboard-ng.yaml
# Change /etc/hosts file with below example entrie if ingress running 
#On worker1 
#10.1.1.5 worker1 dashboard.f5.local
#On worker2 
#10.1.1.6 worker2 dashboard.f5.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: db-gateway
  namespace: web-tier
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dashboard.f5.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-route-vs
  namespace: web-tier
spec:
  hosts:
  - dashboard.f5.local
  gateways:
  - db-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: dashboard-svc.web-tier.svc.cluster.local
        port: 
          number: 8080
