exercises/ex4-ingress-Gateway/4-tls-passthrough.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: myapp
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - myapp.f5.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myapp-vs
  namespace: myapp
spec:
  hosts:
  - myapp.f5.local
  gateways:
  - myapp-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - myapp.f5.local
    route:
    - destination:
        host: myapp.myapp.svc.cluster.local
        port:
          number: 443
